--- a/.github/workflows/jd_bean_change.yml
+++ b/.github/workflows/jd_bean_change.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: tommyhe1217/jd20201126
+          repository: bhzy1217/Loon
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
